# simple_image_steganography

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  decode  decode.cpp  encode  encode.cpp
message/: msg.txt
